# teamstyle16

./: .gitignore  README.md  UIInfoWidget.py  UIInfoWidget1.py  UIInfoWidget2.py  UIMainWindow.py  UIMapmaker.py  UIReplayer.py  UITeamWidget.py  ui_GameInfoTabWidget.py  ui_aireplayer.py  ui_gameinfo1.py  ui_gameinfo2.py  ui_mapmaker.py
doc/: faq.html  faq.md  logic_api.md  platform_api.md  player_doc.md  rules.docx  rules.md  rules.tex  rules_v2.0.md  rules_v2.1.html  testmatch_rule.docx
doc/src/: rules.tex
src/: ai_proxy.py  astar_test.py  basic.py  command.py  communicate.proto  event.py  game_constants.json  gamebody.py  interface.md  main.py  map.py
src/deep_blue/: AIReplayer.ui  BeginMenu.ui  Deep Blue.py  GameInfo1.ui  GameInfo2.ui  LoginDialog.ui  Mapmaker.ui  ProductionEvent.py  ReplayEvent.py  TeamWidget.ui  UIBackWindow.py  UIBeginMenu.py  UIHelpdlg.py  UIHelpdlg2.py  UIInfoWidget1.py  UIInfoWidget2.py  UILoginWidget.py  UIMainWindow.py  UIMapmaker.py  UIReplayer.py  UITeamWidget.py  UIWebPlay.py  UIWebWidget.py  WebPlay.ui  ai_battle.py  auto_fight.py  bigmap2.map  debugger.py  easy_debugger.bat  easy_debugger_verbose.bat  helpdlg.ui  helpdlg2.ui  mainAnimation.py  mainwindow.ui  map_for_level_4-5.map  mapmaker.py  mapreplayer.py  md5.py  midbigmap1.map  middlemap1.map  (+21 more)
src/deep_blue/battle/: 2013_12_31_battle2  ai.battle  aihuman.battle  askdjf.battle  better.battle  boom.battle  fifty.battle  fortboom.battle  ganggang.battle  haofeijin.battle  miao.battle  new.battle  sample(1).battle  sihan.battle  smtry2.battle  success.battle  test.battle  test_match.battle
src/deep_blue/deep_blue/: ai_battle.py  ai_proxy.py  battle.py  communicate_pb2.py  fake_battle_debug.py  human_ai_battle.py  profiler.py  replayer.py  test2.battle
src/deep_blue/easy_ai_battle/: easy_ai_battle.bat  easy_ai_battle_verbose.bat
src/deep_blue/easy_debugger/: easy_debugger.bat  easy_debugger_verbose.bat
src/deep_blue/image/: Thumbs.db
src/deep_blue/lib/: PaintEvent.py  ProductionEvent.py  ProductionPaint.py  ProductionPaint.ui  SmallMap.py  basic.py  qrc_source.py  resource.qrc  ui_ProductionPaint.py
src/deep_blue/maps/: 100.map  ause.map  (+43 more)
src/player_file/: CMakeLists.txt  Makefile  README.html  README.md  ai.cpp  ai_main.cpp  basic.cpp  basic.h  basic_test.cpp  client.cpp  communicate.pb.cc  communicate.pb.h  connection.cpp  connection.h  connection_test.cpp  debugger.cpp  genproj.bat  main.cpp  sample_ai.cpp  testmatch_level_1_ai.cpp  testmatch_level_2_ai.cpp  xcode.sh
src/player_file/ai/: 11101001.cpp  531B.cpp  CMakeLists.txt  Diver.cpp  Hahn_s_Paradise.cpp  NULL.cpp  OMG.cpp  YGYG.cpp  basic.h  伤逝44杀.cpp  你说得完全.cpp  写代码也有选择困难症~.cpp  舍长说名字越帅越好~.cpp  这就是我们的队名～～～～～.cpp  迷你中国流.cpp  邹平双语学校.cpp  队名要很长很长很长才不会酱油.cpp  随意吧.cpp
src/player_file/ai_internal/: CMakeLists.txt  basic.cpp  basic_test.cpp  communicate.pb.cc  communicate.pb.h  connection.cpp  connection.h  connection_test.cpp  debugger.cpp  sample_ai.cpp
src/player_file/ai_internal/boost_1_56_0/lib32-msvc-10.0/: libboost_system-vc100-s-1_56.lib
src/player_file/ai_internal/boost_1_56_0/lib32-msvc-11.0/: boost_system-vc110-mt-1_56.lib  libboost_system-vc110-mt-s-1_56.lib  libboost_system-vc110-mt-sgd-1_56.lib  libboost_system-vc110-sgd-1_56.lib
src/player_file/ai_internal/boost_1_56_0/lib32-msvc-12.0/: boost_system-vc120-mt-1_56.lib
src/player_file/ai_internal/boost_1_56_0/lib32-msvc-8.0/: libboost_system-vc80-mt-1_56.lib
src/player_file/ai_internal/boost_1_56_0/lib32-msvc-9.0/: boost_system-vc90-mt-1_56.lib  libboost_system-vc90-mt-s-1_56.lib  libboost_system-vc90-mt-sgd-1_56.lib
src/player_file/ai_internal/boost_1_56_0/lib64-msvc-12.0/: libboost_system-vc120-mt-s-1_56.lib  libboost_system-vc120-s-1_56.lib  libboost_system-vc120-sgd-1_56.lib
src/player_file/ai_internal/protobuf-2.5.0/src/google/protobuf/: wire_format_lite_inl.h
src/player_file/boost_1_56_0/lib32-msvc-10.0/: libboost_system-vc100-sgd-1_56.lib
src/player_file/boost_1_56_0/lib32-msvc-11.0/: boost_system-vc110-mt-gd-1_56.lib  libboost_system-vc110-s-1_56.lib
src/player_file/boost_1_56_0/lib32-msvc-12.0/: libboost_system-vc120-s-1_56.lib  libboost_system-vc120-sgd-1_56.lib
src/player_file/boost_1_56_0/lib32-msvc-8.0/: boost_system-vc80-mt-1_56.lib  boost_system-vc80-mt-gd-1_56.lib  libboost_system-vc80-mt-gd-1_56.lib  libboost_system-vc80-mt-s-1_56.lib  libboost_system-vc80-mt-sgd-1_56.lib  libboost_system-vc80-s-1_56.lib  libboost_system-vc80-sgd-1_56.lib
src/player_file/boost_1_56_0/lib32-msvc-9.0/: boost_system-vc90-mt-gd-1_56.lib  libboost_system-vc90-s-1_56.lib  libboost_system-vc90-sgd-1_56.lib
src/player_file/boost_1_56_0/lib64-msvc-12.0/: libboost_system-vc120-mt-sgd-1_56.lib
src/player_file/cmake/share/cmake-3.1/Modules/: CMakeDetermineCompilerId.cmake  FindBoost.cmake  FindCUDA.cmake  FindOpenGL.cmake  FindOpenSSL.cmake  WriteCompilerDetectionHeader.cmake
src/player_file/cmake/share/cmake-3.1/Modules/Compiler/: AppleClang-CXX.cmake  Clang-C-FeatureTests.cmake  Clang-C.cmake  Clang-CXX.cmake  GNU-C-FeatureTests.cmake  GNU-C.cmake  GNU-CXX.cmake
src/player_file/protobuf/: CMakeLists.txt
src/player_file/protobuf-2.6.0/gtest/msvc/protobuf/Debug/: gtest_maind.lib  gtestd.lib
src/player_file/protobuf-2.6.0/gtest/msvc/protobuf/Debug/gtest/: CL.read.1.tlog  CL.write.1.tlog  Lib-link.read.1.tlog  Lib-link.write.1.tlog  cl.command.1.tlog  lib.command.1.tlog  vc110.idb
src/player_file/protobuf-2.6.0/gtest/msvc/protobuf/Debug/gtest_main/: CL.read.1.tlog  CL.write.1.tlog  Lib-link.read.1.tlog  Lib-link.write.1.tlog  cl.command.1.tlog  lib.command.1.tlog  vc110.idb
src/player_file/protobuf-2.6.0/vsprojects/: UpgradeLog.htm  libprotobuf.vcxproj  libprotoc.vcxproj  test_plugin.vcxproj.filters
src/player_file/protobuf-2.6.0/vsprojects/Debug/: CL.read.1.tlog  CL.write.1.tlog  Lib-link.read.1.tlog  Lib-link.write.1.tlog  cl.command.1.tlog  custombuild.command.1.tlog  custombuild.read.1.tlog  custombuild.write.1.tlog  lib.command.1.tlog  libprotoc.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog  lite-test.ilk
(+44 files in other folders)
