cmake_minimum_required(VERSION 2.6)
project(ai)

# Build ais
add_executable (11101001 11101001.cpp)
add_executable (531B 531B.cpp)
add_executable (Diver Diver.cpp)
add_executable (Hahn_s_Paradise Hahn_s_Paradise.cpp)
add_executable (NULL NULL.cpp)
add_executable (OMG OMG.cpp)
add_executable (YGYG YGYG.cpp)
add_executable (ss44s 伤逝44杀.cpp)
add_executable (you_say 你说得完全.cpp)
add_executable (choose_hard 写代码也有选择困难症~.cpp)
add_executable (name_handsome 舍长说名字越帅越好~.cpp)
add_executable (this_is_our_team_name 这就是我们的队名～～～～～.cpp)
add_executable (mini_chinese_flow 迷你中国流.cpp)
add_executable (zoupin 邹平双语学校.cpp)
add_executable (long_team_name 队名要很长很长很长才不会酱油.cpp)
add_executable (whatever 随意吧.cpp)

target_link_libraries (11101001 ai_driver)
target_link_libraries (531B ai_driver)
target_link_libraries (Diver ai_driver)
target_link_libraries (Hahn_s_Paradise ai_driver)
target_link_libraries (NULL ai_driver)
target_link_libraries (OMG ai_driver)
target_link_libraries (YGYG ai_driver)
target_link_libraries (ss44s ai_driver)
target_link_libraries (you_say ai_driver)
target_link_libraries (choose_hard ai_driver)
target_link_libraries (name_handsome ai_driver)
target_link_libraries (this_is_our_team_name ai_driver)
target_link_libraries (mini_chinese_flow ai_driver)
target_link_libraries (zoupin ai_driver)
target_link_libraries (long_team_name ai_driver)
target_link_libraries (whatever ai_driver)
